# aquabox-proto

./: CMakeLists.txt  README.md  aquabox_proto.uml  fake_lib.sh
include/: arduino_stream_io.h  command_data.h  command_payload.h  easy_slave.h  easy_slave_property.h  easy_slave_variable.h  error_payload.h  handshake_payload.h  helpers.h  io.h  master.h  mesh_io.h  message.h  message_builder.h  message_io.h  relay_slave.h  slave.cpp  slave.h  types.h  unix_serial_proto_io.h  unix_socket_proto_io.h  value_data.h
inspector/: main.cpp
src/: master.cpp  message_io.cpp  slave.cpp  unix_serial_proto_io.cpp  unix_socket_proto_io.cpp
tests/: in_memory_io.h
